--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1,7 +1,8 @@
 .dashboard{
     background-color: #f5f9fc;
     
-    
+    display: flex;
+    flex-direction: column;
 }
 .dashboard__p1 {
     display: flex;
@@ -11,4 +12,33 @@
     color: gray;
     padding-top: 5px;
     padding-right: 60px;
+}
+.dashboard__logout__wrapper{
+    display: flex;
+    justify-content: center;
+    /* margin-left: 800px; */
+}
+.dashboard__logout{
+    height: 40px;
+    width: 100px;
+    color: white;
+    background-color: #539aec;
+    outline: none;
+    border: none;
+    border-radius: 20px;
+    margin-bottom: 50px;
+    cursor: pointer;
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.15);
+}
+.dashboard__logout:hover{
+    height: 40px;
+    width: 100px;
+    color: black;
+    background-color: #90c4ff;
+    outline: none;
+    border: none;
+    border-radius: 20px;
+    margin-bottom: 50px;
+    cursor: pointer;
+    box-shadow: 0px 0px 30px rgba(0,0,0,0.2);
 }
