--- a/src/styles/assignment-card.css
+++ b/src/styles/assignment-card.css
@@ -2,9 +2,6 @@
     display: flex;
     justify-content: center;
     margin-top: 20px;
-    /* margin-bottom: 400px;    */
-    /* padding: 10px;  */
-    /* margin-bottom: 20px;  */
 }
 .assignment-card{
     border-radius: 20px;
@@ -13,10 +10,14 @@
     box-shadow: 0px 0px 20px rgba(0,0,0,0.15);
     cursor: pointer;
 }
+@media all and (max-width:430px){
+    .assignment-card{
+        width: 330px;
+    }
+}
 .assignment-card__header{
     display: flex;
     justify-content: space-between;
-    width: 400px;
     align-items: center;
     margin-top: 20px;
 }
@@ -49,8 +50,8 @@
     margin-top: 20px;
     font-size: 15px;
     color: gray;
-    width: 380px;
     margin-left: 15px;
+    margin-right: 15px;
 }
 .assignment-card__read-more{
     display: flex;
@@ -62,7 +63,6 @@
     font-size: 12px;
     color: gray;
     font-weight: 550;
-    /* margin-left: 370px; */
 }
 .assignment-card__due-date{
     margin-left: 15px;
