--- a/src/styles/batch-card.css
+++ b/src/styles/batch-card.css
@@ -2,14 +2,17 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* align-items: center; */
     width: 400px;
-    /* margin-left: 563px; */
     background-color: white;
     border-radius: 20px;
     margin-top: 15px;
     box-shadow: 0px 0px 20px rgba(0,0,0,0.15);
     cursor: pointer;
+}
+@media all and (max-width:430px){
+    .batch-card{
+        width: 330px;
+    }
 }
 .batch-card__wrapper{
     display: flex;
@@ -46,7 +49,6 @@
     margin-left: 15px;
     align-items: center;
     margin-bottom: 20px;
-    /* padding-bottom: 20px; */
 }
 .batch-card__day {
     margin-left: 10px;
