--- a/src/styles/class.css
+++ b/src/styles/class.css
@@ -1,22 +1,28 @@
 .classes__heading {
     font-size: x-large;
     color: #353a44;
-    /* padding-right: 130px; */
-    /* padding-top: 30px; */
-    /* padding-bottom: 20px; */
-    margin-top: 30px;
+    font-weight: 550;
+    color: rgb(107, 107, 107);
+    margin-top: 20px;
     margin-bottom: 20px;
     margin-right: 130px;
 }
 .classes {
-    /* padding-left: 20px; */
-    /* margin-left: 20px; */
-    max-width: 350px;
-    
+    width: 400px;
 }
 .classes__card {
     width: 400px;
-    
+}
+@media all and (max-width:430px){
+    .classes{
+        width: 330px;
+    }
+    .classes__card{
+        width: 330px;
+    }
+    .classes__heading{
+        width: 330px;
+    }
 }
 .classes__p1 {
     padding: 25px;
@@ -26,15 +32,9 @@
     border-radius: 20px;
     background-image: url('../images/classes.PNG');
     background-size: cover;
-    /* background-attachment: fixed; */
     background-position: center;
-    /* background-size: ; */
-
 }
-
 .classes__wrapper {
     display: flex;
     justify-content: center;
-    /* margin-right: 15px; */
-    padding-right: 45px;
 }
