--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -19,6 +19,7 @@
     background-color: #f5f9fc;
     height: 100vh;
 }
+
 .login__wrapper{
     margin-top: 20px;
 }
@@ -45,14 +46,15 @@ font-weight: 600;
 .login__signIn__btn{
     height: 50px;
     border-radius: 10px;
-    border: none;
+    border: none !important;
+    outline: none !important;
     background-color: #519aef;
     color: white;
     font-size: medium;
     cursor: pointer;
     margin-top: 40px;
     font-family: 'Inter', sans-serif;
-   
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
 }
 .login__signUp{
     display: flex;
@@ -76,7 +78,4 @@ font-weight: 600;
 .login__footer{
     height: 160px;
     z-index: 100;
-}
-.login__footer_circle{
-    
 }
